--- a/scripts/example.ipynb
+++ b/scripts/example.ipynb
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "47fbb153",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,47 @@
       "Flux through biomass reaction is 1.00000000\n",
       "Delta is 8833.00\n",
       "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
-      "Flux through biomass reaction is 1.00000000\n"
+      "Flux through biomass reaction is 1.00000000\n",
+      "Delta is 4416.00\n",
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Flux through biomass reaction is 1.00000000\n",
+      "Delta is 2208.00\n",
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Flux through biomass reaction is 1.00000000\n",
+      "Delta is 1104.00\n",
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Flux through biomass reaction is 1.00000000\n",
+      "Delta is 552.00\n",
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Flux through biomass reaction is 1.00000000\n",
+      "Delta is 276.00\n",
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Flux through biomass reaction is 1.00000000\n",
+      "Delta is 138.00\n",
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Flux through biomass reaction is 1.00000000\n",
+      "Delta is 69.00\n",
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Flux through biomass reaction is 1.00000000\n",
+      "Delta is 34.00\n",
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Flux through biomass reaction is 1.00000000\n",
+      "Delta is 17.00\n",
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Flux through biomass reaction is 1.00000000\n",
+      "Delta is 8.00\n",
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Flux through biomass reaction is 0.60693822\n",
+      "Delta is 4.00\n",
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Flux through objective reaction is 0.00000000\n",
+      "Delta is 6.00\n",
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Flux through objective reaction is 0.00000000\n",
+      "Delta is 7.00\n",
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Flux through biomass reaction is 0.36469980\n",
+      "Objective value is 1.000000.\n"
      ]
     }
    ],
