--- a/scripts/example.ipynb
+++ b/scripts/example.ipynb
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "47fbb153",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
     }
    ],
    "source": [
-    "model, obj, new_reacs = gapfill_function.gapfill(all_reactions, draft_reaction_ids, {}, 'bio1', result_selection = 'min_reactions')\n"
+    "model, obj, new_reacs = gapfill_function.gapfill(all_reactions, draft_reaction_ids, {}, 'bio1', medium = 'complete', result_selection = 'min_reactions')\n"
    ]
   },
   {
