updates to text and changed the transposition of multiple predictions

--- a/scripts/NN_example.ipynb
+++ b/scripts/NN_example.ipynb
@@ -77,7 +77,8 @@
    "id": "92b03fc0",
    "metadata": {},
    "source": [
-    "Load in the data, the current NN requires a binary list indicating presences of reactions, important is that this is in the right order (maybe something that I can solve).\n",
+    "Load in the data, the current NN requires a binary list indicating presences of reactions, it is important that this list is in the right order (maybe something that I can solve later?).\n",
+    "\n",
     "First lets try it with a single reaction set"
    ]
   },
@@ -174,7 +175,7 @@
     "df = pd.read_csv(input_path, index_col=0)\n",
     "model_ids = df.columns\n",
     "rxn_ids = df.index\n",
-    "input_data= df.to_numpy().T"
+    "input_data= df.to_numpy().T #The neural network makes predictions per row so we need to transpose the input"
    ]
   },
   {
@@ -182,7 +183,26 @@
    "id": "da538646",
    "metadata": {},
    "source": [
-    "we can then create a prediction with the same order of reaction and model ids"
+    "We can then create a array of prediction scores with the same order of reaction and model ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3e50af9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#   load network and make prediction\n",
+    "prediction = NN_Predictor.make_prediction(input_data,NN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f082c248",
+   "metadata": {},
+   "source": [
+    "Finally we can create a dataframe of predictions so we can see which score corresponds to which model and reaction id"
    ]
   },
   {
@@ -192,9 +212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#   load network and make prediction\n",
-    "prediction = NN_Predictor.make_prediction(input_data,NN)\n",
-    "df_p = pd.DataFrame(index=rxn_ids, columns=model_ids, data=prediction)\n",
+    "t_prediction = prediction.T  #Transpose the data back, this is convuluted, I will see if I can make this better\n",
+    "df_p = pd.DataFrame(index=rxn_ids, columns=model_ids, data=t_prediction)\n",
     "df_p.to_csv(output_path+'/Multiple_NN_predictions.csv')"
    ]
   },
